--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,20 @@
   <artifactId>java_spc</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>java_spc</name>
+
+	<dependencies>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.9.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>xom</groupId>
+			<artifactId>xom</artifactId>
+			<version>1.2.5</version>
+		</dependency>
+	</dependencies>
   
   <build>
   	<finalName>java_spc</finalName>
