--- a/pom.xml
+++ b/pom.xml
@@ -37,13 +37,19 @@
 			<version>1.4.11.Final</version>
 		</dependency>
 
-
 		<dependency>
 			<groupId>org.jboss.marshalling</groupId>
 			<artifactId>jboss-marshalling-serial</artifactId>
 			<version>1.4.11.Final</version>
 			<scope>test</scope>
 		</dependency>
+
+		<dependency>
+			<groupId>com.thoughtworks.xstream</groupId>
+			<artifactId>xstream</artifactId>
+			<version>1.4.7</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
